Mon Feb 23 2004 Anton Kokalj (tone.kokalj@ijs.si)
	* tclUtils.tcl: fixing tempFile routine to work also for MS-Windows
	* guib.bat: adding a batch file for MS-DOS/Windows

Fri Feb 20 2004 Anton Kokalj (tone.kokalj@ijs.si)
	* addapting the package to work with Tcl/Tk8.4, Itcl/Itk 3.2, and
	Iwidgets 4.0 
	* porting the package to MS-Windows

Tue Feb 17 2004 Anton Kokalj (tone.kokalj@ijs.si)
        * adding help button component to table widget
	* ChangeLog: the beginning of the ChangeLog
	
ChangeLog ends here